<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thirdmadman.tgu.MyCabinet"

    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/login_background" />

    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:visibility="visible">

        <EditText
            android:id="@+id/console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:visibility="invisible" />

        <Button
            android:id="@+id/destroyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/console"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="73dp"
            android:background="@drawable/button_login"
            android:text="@string/loginBtnAction"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/saveLoginCheckBox"
            style="@android:style/Widget.CompoundButton.CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="187dp"
            android:checked="true"
            android:text="@string/save_login_checkbox"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/destroyBtn"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="79dp"
            android:ems="10"
            android:hint="Пароль от портала ТГУ"
            android:inputType="textPassword"
            android:text="uxkoekye" />

        <EditText
            android:id="@+id/loginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/passEditText"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="13dp"
            android:ems="10"
            android:hint="Логин от портала ТГУ"
            android:inputType="textPersonName"
            android:text="29549" />

        <TextView
            android:id="@+id/MainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginEditText"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="47dp"
            android:text="@string/loginFormTitleTextView"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp" />

        <ProgressBar
            android:id="@+id/loginProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/console"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/exitLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:visibility="invisible">

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="118dp"
            android:background="@drawable/button_login"
            android:text="@string/exitBtnAction"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/loginGreetingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginUserName"
            android:layout_alignStart="@+id/exitButton"
            android:layout_marginBottom="10dp"
            android:text="Вы успешно вошли в свой аккаунт"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/loginUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginCongratulationsText"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:text="Незнакомец"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/loginCongratulationsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/exitButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="28dp"
            android:text="@string/loginCongratulationsText"
            android:textAlignment="center"
            android:textSize="20sp" />
    </RelativeLayout>

</android.widget.RelativeLayout>